While the display-panes indicator is on screen, make the number keys select the pane with that index.

--- a/tmux.1
+++ b/tmux.1
@@ -689,6 +689,11 @@ See the
 and
 .Ic display-panes-colour
 session options.
+While the indicator is on screen, a pane may be selected with the
+.Ql 0
+to
+.Ql 9
+keys.
 .It Ic down-pane Op Fl t Ar target-pane
 .D1 (alias: Ic downp )
 Move down a pane.
