Permit options such as status-bg to be configured using the entire 256 colour palette by setting "colour0" to "colour255".

--- a/tmux.1
+++ b/tmux.1
@@ -1250,8 +1250,11 @@ is one of:
 .Ic blue ,
 .Ic magenta ,
 .Ic cyan ,
-.Ic white
-or
+.Ic white ,
+.Ic colour0
+to
+.Ic colour255
+from the 256-colour palette, or
 .Ic default .
 .It Ic message-fg Ar colour
 Set status line message foreground colour.
