New option, set-titles-string, to allow the window title to be specified (as for status-left/right) if set-titles is on. Also only update the title when the status line is being redrawn.

--- a/tmux.1
+++ b/tmux.1
@@ -1287,6 +1287,13 @@ This option is off by default.
 Note that elinks
 will only attempt to set the window title if the STY environment
 variable is set.
+.It Ic set-titles-string Ar string
+String used to set the window title if
+.Ic set-titles
+is on.
+Character sequences are replaced as for the
+.Ic status-left
+option.
 .It Xo Ic status
 .Op Ic on | off
 .Xc
