--- a/tmux.1
+++ b/tmux.1
@@ -1048,6 +1048,7 @@ characters.
 All arguments are sent sequentially from first to last.
 .It Ic send-prefix Op Fl t Ar target-pane
 Send the prefix key to a window as if it was pressed.
+If multiple prefix keys are configured, only the first is sent.
 .It Xo Ic unbind-key
 .Op Fl cn
 .Op Fl t Ar key-table
@@ -1258,8 +1259,11 @@ from the 256-colour palette, or
 .Ic default .
 .It Ic message-fg Ar colour
 Set status line message foreground colour.
-.It Ic prefix Ar key
-Set the current prefix key.
+.It Ic prefix Ar keys
+Set the keys accepted as a prefix key.
+.Ar keys
+is a comma-separated list of key names, each of which individually behave as
+the prefix key.
 .It Ic repeat-time Ar time
 Allow multiple commands to be entered without pressing the prefix-key again
 in the specified
