Support -c like sh(1) to execute a command, useful when tmux is a login shell. Suggested by halex@.
This includes another protocol version increase (the last for now) so again
restart the tmux server before upgrading.

--- a/tmux.1
+++ b/tmux.1
@@ -24,6 +24,7 @@
 .Nm tmux
 .Bk -words
 .Op Fl 28dlquv
+.Op Fl c Ar shell-command
 .Op Fl f Ar file
 .Op Fl L Ar socket-name
 .Op Fl S Ar socket-path
@@ -101,6 +102,15 @@ to assume the terminal supports 256 colours.
 Like
 .Fl 2 ,
 but indicates that the terminal supports 88 colours.
+.It Fl c Ar shell-command
+Execute
+.Ar shell-command
+using the default shell.
+If necessary, the
+.Nm
+server will be started to retrieve the
+.Ic default-shell
+option.
 .It Fl d
 Force
 .Nm
