Get / and ? the right way round in vi mode, and use : for goto line rather than g.

--- a/tmux.1
+++ b/tmux.1
@@ -508,7 +508,7 @@ The following keys are supported as appropriate for the mode:
 .It Li "Delete entire line" Ta "d" Ta "C-u"
 .It Li "Delete to end of line" Ta "D" Ta "C-k"
 .It Li "End of line" Ta "$" Ta "C-e"
-.It Li "Goto line" Ta "g" Ta "g"
+.It Li "Goto line" Ta ":" Ta "g"
 .It Li "Next page" Ta "C-f" Ta "Page down"
 .It Li "Next word" Ta "w" Ta "M-f"
 .It Li "Paste buffer" Ta "p" Ta "C-y"
