--- a/tmux.1
+++ b/tmux.1
@@ -515,6 +515,8 @@ The following keys are supported as appropriate for the mode:
 .It Li "Previous page" Ta "C-u" Ta "Page up"
 .It Li "Previous word" Ta "b" Ta "M-b"
 .It Li "Quit mode" Ta "q" Ta "Escape"
+.It Li "Scroll down" Ta "C-Down" Ta "C-Down"
+.It Li "Scroll up" Ta "C-Up" Ta "C-Up"
 .It Li "Search again" Ta "n" Ta "n"
 .It Li "Search backward" Ta "?" Ta "C-r"
 .It Li "Search forward" Ta "/" Ta "C-s"
