Add a simple synchronize-panes window option: when set, all input to any pane that is part of the window is also sent to all other panes in the same window. Suggested by several, most recently Tomasz Pajor.

--- a/tmux.1
+++ b/tmux.1
@@ -1662,6 +1662,11 @@ The window may be reactivated with the
 .Ic respawn-window
 command.
 .Pp
+.It Xo Ic synchronize-panes
+.Op Ic on | off
+.Xc
+Duplicate input to any pane to all other panes in the same window, except
+for panes that are not in output mode.
 .It Xo Ic utf8
 .Op Ic on | off
 .Xc
