Split list-panes off from list-windows.

--- a/tmux.1
+++ b/tmux.1
@@ -775,6 +775,10 @@ exists, it is killed, otherwise an error is generated.
 If
 .Fl d
 is given, the newly linked window is not selected.
+.It Ic list-panes Op Fl t Ar target-window
+.D1 (alias: Ic lsp )
+List the panes in the current window or in
+.Ar target-window .
 .It Ic list-windows Op Fl t Ar target-session
 .D1 (alias: Ic lsw )
 List windows in the current session or in
