-scroll mode which is dead.

--- a/tmux.1
+++ b/tmux.1
@@ -1678,7 +1678,7 @@ Set window modes foreground colour.
 .It Xo Ic mode-keys
 .Op Ic vi | emacs
 .Xc
-Use vi or emacs-style key bindings in scroll, copy and choice modes.
+Use vi or emacs-style key bindings in copy and choice modes.
 Key bindings default to emacs.
 .Pp
 .It Xo Ic mode-mouse
