Switch run-shell over to queue the command in the background like #().

--- a/tmux.1
+++ b/tmux.1
@@ -2068,8 +2068,8 @@ option.
 .D1 (alias: Ic run )
 Execute
 .Ar command
-without creating a window.
-Any output to stdout is displayed in output mode.
+in the background without creating a window.
+After the command finishes, any output to stdout is displayed in output mode.
 If
 .Ar command
 doesn't return success, the exit status is also displayed.
