--- a/tmux.1
+++ b/tmux.1
@@ -1324,8 +1324,8 @@ If this option is
 (the default),
 instead of each session locking individually as each has been
 idle for
-.Ic lock-after-time
-, the entire server will lock after
+.Ic lock-after-time ,
+the entire server will lock after
 .Em all
 sessions would have locked.
 This has no effect as a session option; it must be set as a global option.
