--- a/tmux.1
+++ b/tmux.1
@@ -1470,22 +1470,26 @@ the
 .Ic status-interval
 option: if the status line is redrawn in the meantime, the previous result is
 used.
+.Pp
 #[attributes] allows a comma-separated list of attributes to be specified,
 these may be
 .Ql fg=colour
 to set the foreground colour,
 .Ql bg=colour
-to set the background colour, or one of the attributes described under the
+to set the background colour, the name of one of the attributes (listed under the
 .Ic message-attr
-option.
+option) to turn an attribute on, or an attribute prefixed with
+.Ql no
+to turn one off, for example
+.Ic nobright .
 Examples are:
 .Bd -literal -offset indent
 #(sysctl vm.loadavg)
 #[fg=yellow,bold]#(apm -l)%%#[default] [#S]
 .Ed
 .Pp
-Where appropriate, these may be prefixed with a number to specify the maximum
-length, for example
+Where appropriate, special character sequences may be prefixed with a number to
+specify the maximum length, for example
 .Ql #24T .
 .Pp
 By default, UTF-8 in
