--- a/TODO
+++ b/TODO
@@ -9,7 +9,6 @@
 - garbage collect window history (100 lines at a time?) if it hasn't been used
   in $x time (need window creation/use times)
 - lift SHRT_MAX limits for history?
-- better mode features: search
 - flags to centre screen in window
 - better terminal emulation
 - activity/bell should be per-window not per-link? what if it is cur win in
@@ -89,3 +88,5 @@
   output
 - bind commands to mouse buttons
 - dim/nobright etc in #[]
+- UTF-8 to a non-UTF-8 terminal should not be able to balls up
+  the terminal - www/ruby-addressable; make regress
