Add mode keys to move the cursor to the top, middle and bottom of the screen. H/M/L in vi mode and M-R/M-r in emacs (bottom of screen not bound in emacs).

--- a/tmux.1
+++ b/tmux.1
@@ -538,6 +538,9 @@ The following keys are supported as appropriate for the mode:
 .It Li "Start of line" Ta "0" Ta "C-a"
 .It Li "Start selection" Ta "Space" Ta "C-Space"
 .It Li "Transpose chars" Ta "" Ta "C-t"
+.It Li "Cursor to top line" Ta "H" Ta "M-R"
+.It Li "Cursor to middle line" Ta "M" Ta "M-r"
+.It Li "Cursor to bottom line" Ta "L" Ta ""
 .El
 .Pp
 These key bindings are defined in a set of named tables:
