--- a/TODO
+++ b/TODO
@@ -90,4 +90,5 @@
 	bind -n ^A prefix-table "default"
   where prefix-table sets command lookup table and sets prefix flag, then next key
   is looked up in that table
-- fix UTF-8 and split-window
+- check fix UTF-8 and split-window? should be okay
+- UTF-8 should be a pointer into a combined string buffer
