Tweak descriptions for up/down pane to be clearer.

--- a/tmux.1
+++ b/tmux.1
@@ -725,7 +725,7 @@ to
 keys.
 .It Ic down-pane Op Fl t Ar target-pane
 .D1 (alias: Ic downp )
-Move down a pane.
+Change the active pane to the next pane (higher index).
 .It Xo Ic find-window
 .Op Fl t Ar target-window
 .Ar match-string
@@ -1013,7 +1013,7 @@ is specified and the window is linked to only one session, it is unlinked and
 destroyed.
 .It Ic up-pane Op Fl t Ar target-pane
 .D1 (alias: Ic upp )
-Move up a pane.
+Change the active pane to the previous pane (lower index).
 .El
 .Sh KEY BINDINGS
 .Nm
