Remove -d from tmux.1 as well.

--- a/tmux.1
+++ b/tmux.1
@@ -23,7 +23,7 @@
 .Sh SYNOPSIS
 .Nm tmux
 .Bk -words
-.Op Fl 28dlquv
+.Op Fl 28lquv
 .Op Fl c Ar shell-command
 .Op Fl f Ar file
 .Op Fl L Ar socket-name
@@ -111,10 +111,6 @@ If necessary, the
 server will be started to retrieve the
 .Ic default-shell
 option.
-.It Fl d
-Force
-.Nm
-to assume the terminal supports default colours.
 .It Fl f Ar file
 Specify an alternative configuration file.
 By default,
