--- a/TODO
+++ b/TODO
@@ -92,4 +92,5 @@
 - check fix UTF-8 and split-window? should be okay
 - UTF-8 should be a pointer into a combined string buffer
 - check irssi (term_charset) works with UTF-8
-- xterm keys is all wrong and needs to be rewritten
+- rectangle copy/paste
+
