Missing setenv/showenv aliases.

--- a/tmux.1
+++ b/tmux.1
@@ -1838,6 +1838,7 @@ Commands to alter and view the environment are:
 .Op Fl t Ar target-session
 .Ar name Op Ar value
 .Xc
+.D1 (alias: Ic setenv )
 Set or unset an environment variable.
 If
 .Fl g
@@ -1854,6 +1855,7 @@ new process.
 .Op Fl g
 .Op Fl t Ar target-session
 .Xc
+.D1 (alias: Ic showenv )
 Display the environment for
 .Ar target-session
 or the global environment with
