Fix vi page up mode key (from naddy), add missing half page keys, and sort.

--- a/tmux.1
+++ b/tmux.1
@@ -515,15 +515,20 @@ The following keys are supported as appropriate for the mode:
 .It Li "Cursor down" Ta "j" Ta "Down"
 .It Li "Cursor left" Ta "h" Ta "Left"
 .It Li "Cursor right" Ta "l" Ta "Right"
+.It Li "Cursor to bottom line" Ta "L" Ta ""
+.It Li "Cursor to middle line" Ta "M" Ta "M-r"
+.It Li "Cursor to top line" Ta "H" Ta "M-R"
 .It Li "Cursor up" Ta "k" Ta "Up"
 .It Li "Delete entire line" Ta "d" Ta "C-u"
 .It Li "Delete to end of line" Ta "D" Ta "C-k"
 .It Li "End of line" Ta "$" Ta "C-e"
 .It Li "Goto line" Ta ":" Ta "g"
+.It Li "Half page down" Ta "C-d" Ta "M-Down"
+.It Li "Half page up" Ta "C-u" Ta "M-Up"
 .It Li "Next page" Ta "C-f" Ta "Page down"
 .It Li "Next word" Ta "w" Ta "M-f"
 .It Li "Paste buffer" Ta "p" Ta "C-y"
-.It Li "Previous page" Ta "C-u" Ta "Page up"
+.It Li "Previous page" Ta "C-b" Ta "Page up"
 .It Li "Previous word" Ta "b" Ta "M-b"
 .It Li "Quit mode" Ta "q" Ta "Escape"
 .It Li "Scroll down" Ta "C-Down or J" Ta "C-Down"
@@ -534,9 +539,6 @@ The following keys are supported as appropriate for the mode:
 .It Li "Start of line" Ta "0" Ta "C-a"
 .It Li "Start selection" Ta "Space" Ta "C-Space"
 .It Li "Transpose chars" Ta "" Ta "C-t"
-.It Li "Cursor to top line" Ta "H" Ta "M-R"
-.It Li "Cursor to middle line" Ta "M" Ta "M-r"
-.It Li "Cursor to bottom line" Ta "L" Ta ""
 .El
 .Pp
 These key bindings are defined in a set of named tables:
