Add an activity time for clients, like for sessions, and change session and client lookup to pick the most recently used rather than the most recently created - this is much more useful when used interactively and (because the activity time is set at creation) should have no effect on source-file.
Based on a problem reported by Jan Johansson.

--- a/tmux.1
+++ b/tmux.1
@@ -282,7 +282,7 @@ pattern.
 If a single match is found, it is used as the target session; multiple matches
 produce an error.
 If a session is omitted, the current session is used if available; if no
-current session is available, the most recently created is chosen.
+current session is available, the most recently used is chosen.
 .Pp
 .Ar target-window
 specifies a window in the form
