--- a/tmux.1
+++ b/tmux.1
@@ -1788,6 +1788,7 @@ will generate
 .Xr xterm 1 -style
 function key sequences; these have a number included to indicate modifiers such
 as Shift, Alt or Ctrl.
+The default is on.
 .El
 .It Xo Ic show-options
 .Op Fl g
