Mark -n keys with (no prefix) rather than [].

--- a/tmux.1
+++ b/tmux.1
@@ -1114,7 +1114,8 @@ are printed.
 Keys bound without the prefix key (see
 .Ic bind-key
 .Fl n )
-are enclosed in square brackets.
+are marked with
+.Ql (no prefix) .
 .Pp
 With
 .Fl t ,
