--- a/tmux.1
+++ b/tmux.1
@@ -1803,7 +1803,7 @@ will generate
 .Xr xterm 1 -style
 function key sequences; these have a number included to indicate modifiers such
 as Shift, Alt or Ctrl.
-The default is on.
+The default is off.
 .El
 .It Xo Ic show-options
 .Op Fl g
