--- a/tmux.1
+++ b/tmux.1
@@ -1994,7 +1994,8 @@ This command works only from inside
 .D1 (alias: Ic display )
 Display a message in the status line.
 The format of
-.Ar message is as for
+.Ar message
+is as for
 .Ic status-left ,
 with the exception that #() are not handled.
 .It Ic select-prompt Op Fl t Ar target-client
