Add cursor keys to the key names list.

--- a/tmux.1
+++ b/tmux.1
@@ -1044,6 +1044,10 @@ or
 and Alt (meta) with
 .Ql M- .
 In addition, the following special key names are accepted:
+.Em Up ,
+.Em Down ,
+.Em Left ,
+.Em Right ,
 .Em BSpace ,
 .Em BTab ,
 .Em DC
