New command, capture-pane, which copies the entire pane contents to a paste buffer. From Jonathan Alvarado.

--- a/tmux.1
+++ b/tmux.1
@@ -664,6 +664,13 @@ off from its containing window to make it the only pane in a new window.
 If
 .Fl d
 is given, the new window does not become the current window.
+.It Xo Ic capture-pane
+.Op Fl b Ar buffer-index
+.Op Fl t Ar target-pane
+.Xc
+.D1 (alias: Ic capturep )
+Capture the contents of a pane to the specified buffer, or a new buffer if none
+is specified.
 .It Xo
 .Ic choose-client
 .Op Fl t Ar target-window
